service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-blue
spec:
  selector:
    app: my-app
    version: blue
  ports:
  - protocol: TCP
    name: http
    port: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-green
spec:
  selector:
    app: my-app
    version: green
  ports:
    - protocol: TCP
      name: http
      port: 8080
  type: ClusterIP
