service-node-port-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
    version: blue
  ports:
  - protocol: TCP
    name: http
    port: 8080
    nodePort: 30081
  type: NodePort
