service-node-port-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
    version: green
  ports:
  - protocol: TCP
    name: http
    port: 8080
    nodePort: 30082
  type: NodePort
